[tool.poetry]
name = "project-1-gorelikov-m25-555"
version = "0.1.0"
description = "Project is about Maze game."
authors = ["Matvey Gorelikov"]
packages = [{ include = "labyrinth_game" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ruff = "^0.13.3"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
